# curs_project

./: .coverage  .env  .env_template  README.md  pyproject.toml  report.txt
data/: .~lock.operations.xlsx#
src/: json_generator.py  logger.py  main.py  report.txt  reports.py  services.py  user_settings.py  utils.py  views.py
tests/: report.txt  test_json_generator.py  test_main.py  test_reports.py  test_services.py  test_user_settings.py  test_utils.py  test_views.py
